コメント、いいね機能完了

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,30 +1,37 @@
-<p>新規投稿画面</p>
-
-<%= form_with model:@post, local:true do |f| %>
-<div class="form-group">
-  <%= f.label :post_image, "商品の画像" %>
-  <%= f.attachment_field :post_image, placeholder:'商品の画像' %>
+<div class="container">
+  <div class="row mb-4 mx-auto">
+    <div class="col-md-12">
+      <p class="h4 mt-4 mb-5">商品新規登録</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <%= form_with model:@post, local:true do |f| %>
+      <div class="col-md-5 mx-auto">
+        <div class="form-group">
+          <p>商品画像</p><%= f.attachment_field :post_image, placeholder:'商品の画像' %>
+        </div>
+        <div class="form-group">
+          <p>商品名</p><%= f.text_field :name, class: 'form-control', placeholder:'商品名' %>
+        </div>
+        <div class="form-group">
+          <p>カテゴリー</p><%= f.select :category, [["キッチン", "キッチン"], ["バスルーム", "バスルーム"], ["クローゼット", "クローゼット"], ["リビング", "リビング"], ["トイレ", "トイレ"]], include_blank: "選択して下さい", class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <p>商品の大きさ</p><%= f.text_field :size, class: 'form-control', placeholder:'たて○cm よこ◯cm 高さ○cm' %>
+        </div>
+         <div class="form-group">
+          <p>購入先URL</p> <%= f.text_field :shop_url, class: 'form-control', placeholder:'購入先のURLを入力' %>
+        </div>
+        <div class="form-group">
+          <p>商品説明</p> <%= f.text_area :caption, rows:'7' ,class: 'form-control', placeholder:'使用方法などを記載してください' %>
+        </div>
+      </div>
+      <div class="col-md-4 mx-auto mb-4 mt-4">
+        <p><%= f.submit '投稿する', class: "btn btn-success" %></p>
+      </div>
+      <% end %>
+    </div>
+  </div>
 </div>
-<div class="form-group">
-  <%= f.label :name, "商品名" %>
-  <%= f.text_field :name, class: 'form-control', placeholder:'商品名' %>
-</div>
-<div class="form-group">
-  <%= f.label :category, "カテゴリー" %>
-  <%= f.select :category, [["キッチン", "キッチン"], ["バスルーム", "バスルーム"], ["クローゼット", "クローゼット"], ["リビング", "リビング"], ["トイレ", "トイレ"]], include_blank: "選択して下さい", class: 'form-control' %>
-</div>
-<div class="form-group">
-  <%= f.label :size, "商品の大きさ" %>
-  <%= f.text_field :size, class: 'form-control', placeholder:'たて○cm よこ◯cm 高さ○cm' %>
-</div>
-<div class="form-group">
-  <%= f.label :shop_url, "購入先URL" %>
-  <%= f.text_field :shop_url, class: 'form-control', placeholder:'購入先のURLを入力' %>
-</div>
-<div class="form-group">
-  <%= f.label :caption, "商品の説明" %>
-  <%= f.text_area :caption, rolw:'7' ,class: 'form-control', placeholder:'使用方法などを記載してください' %>
-</div>
-<%= f.submit '投稿する', class:'btn btn-primary' %>
-<% end %>
 
