--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+/*赤いハート*/
+.heart_red{color:#e54747;}
+
+/*青いハート*/
+.heart_blue{color:#528fff;}
