--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,23 @@
-<p>TOPページ</p>
+<div class="col-md-12" style="background: #FF0000;  height: 50vh;">
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4" style="background: #FFFF99;">ランキング１</div>
+    <div class="col-md-4" style="background: #99FFFF;">ランキング２</div>
+    <div class="col-md-4" style="background: #FF99FF;">ランキング３</div>
+  </div>
+  <div class="row">
+    <div class="col-md-4" style="background: #CCCCCC;">検索画面を表示</div>
+    <div class="col-md-8" style="background: #DDDDDD;">
+      <% @posts.each do |post| %>
+      <div>
+        <%= link_to post_path(post) do %>
+        <%= attachment_image_tag post, :post_image, size:'50x50',fallback:'no_image.jpg'%>
+        <% end %>
+        <%= post.name %><br/>
+        <%= post.created_at.strftime('%Y/%m/%d') %><%= link_to '編集', edit_post_path(post) %><%= link_to '削除', post_path(post), method: :delete %>
+      <% end %>
+    </div>
+  </div>
+</div>
