--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,13 +17,21 @@
         <% end %>
     </div>
   </div>
+  <div class="col-md-12">
+  <h4> My All Magis Strages</h4>
+  <% @posts.each do |post| %>
+  <div class="card shadow-lg mb-3">
+  <%= link_to post_path(post) do %>
+  <%= attachment_image_tag post, :post_image, size:'50x50',fallback:'no_image.jpg'%>
+  <% end %>
+  <%= post.name %><br/>
+  <%= post.created_at.strftime('%Y/%m/%d') %>
+  <span class="text-right">
+  <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-success rounded-pill' %>
+  <%= link_to '削除', post_path(post), method: :delete,class: 'btn btn-sm btn-danger rounded-pill'  %>
+  </span>
+  </div>
+  <% end %>
+</div>
 
 
-      <% @posts.each do |post| %>
-      <div>
-        <%= link_to post_path(post) do %>
-        <%= attachment_image_tag post, :post_image, size:'200x200',fallback:'no_image.jpg'%>
-        <% end %>
-        <%= post.name %><br/>
-        <%= post.created_at.strftime('%Y/%m/%d') %><%= link_to '編集', edit_post_path(post) %><%= link_to '削除', post_path(post), method: :delete %>
-      <% end %>
