--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="col-md-12">
-  <h4> My All Magis Strages</h4>
+  <h4> My ALL Magis Strages</h4>
   <% @posts.each do |post| %>
   <div class="card shadow-lg mb-3">
   <%= link_to post_path(post) do %>
