--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,8 +1,3 @@
-// Place all the styles related to the Posts controller here.
+// Place all the styles related to the Search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-img.sized {
-  width: 100%;
-  height: 80%;
-}
