--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
-<div class="col-md-12" style="background: #FF0000;  height: 50vh;">
-  <p>イメージ画像とキャッチコピー</p>
+<div class="col-md-12">
+    <%= image_tag 'top-image.png', class:'sized' %>
 </div>
 
 <div class="container">
@@ -9,7 +9,7 @@
     <!--jは順位を示す変数。記号は何でもよい。-->
     <% j = 1 %>
     <% @all_ranks.each.with_index(1) do |ranking,i| %>
-     <div class="card shadow-lg col-md-4">
+     <div class="card col-md-4 mt-2 mb-2">
       <% if i == 1 %>
        <% lastFavorite = ranking.favorites.count %>
       <% end %>
@@ -32,21 +32,61 @@
      </div>
      <% end %>
   </div>
+
   <div class="row">
-    <div class="col-md-4" style="background: #CCCCCC;">検索画面を表示</div>
+    <div class="col-md-4" style="background: #CCCCCC;">
+      <div class="search-form">
+      <h4>商品名で検索</h4>
+      <%= form_with url: search_posts_path, method: :get, local: true do |f| %>
+        <%= f.text_field :name, placeholder:"何かお探しですか？" %>
+        <%= f.submit '検索', class: 'btn btn-sm btn-light' %>
+      <% end %>
+      </div>
+
+      <div class="search-form">
+      <table class="table table-bordered genre-table">
+        <thead>
+          <tr>
+            <th>カテゴリー検索</th>
+          </tr>
+        </thead>
+        <tbody>
+        <% @categorys.each do |category| %>
+          <tr>
+            <td>
+              <%= link_to category, search_posts_path(category) %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+    </div>
+
     <div class="col-md-8">
       <h4>ALL Magis Strages</h4>
       <% @posts.each do |post| %>
-      <div class="card shadow-lg mb-3">
+      <div class="card  shadow-lg mb-3" style="max-width: 740px;">
+        <div class="row g-0">
+          <div class="col-md-4">
         <%= link_to post_path(post) do %>
-        <%= attachment_image_tag post, :post_image, size:'50x50',fallback:'no_image.jpg'%>
+        <%= attachment_image_tag post, :post_image, size:'159x120',fallback:'no_image.jpg' %>
         <% end %>
-        <%= post.name %><br/>
-        <%= post.created_at.strftime('%Y/%m/%d') %>
-        <span class="text-right">
-          <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-success rounded-pill' %>
-          <%= link_to '削除', post_path(post), method: :delete,class: 'btn btn-sm btn-danger rounded-pill'  %>
-        </span>
+          </div>
+           <div class="col-md-8">
+             <div class="card-body">
+        <h5 class="card-title"><%= post.name %></h5>
+        <p class="card-text"><small class="text-muted">
+          <span class="fas fa-heart heart_red ml-1"><%= post.favorites.count %></span>
+          <span class="comments_count ml-1">コメント件数: <%= post.comments.count %></span>
+          <span class="ml-1">投稿者: <%= post.user.name %></span>
+          <span class="ml-1">投稿日: <%= post.created_at.strftime('%Y/%m/%d') %></span>
+          <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-success' %>
+          <%= link_to '削除', post_path(post), method: :delete,class: 'btn btn-sm btn-danger'  %>
+        </small></p>
+          </div>
+        </div>
+      </div>
     </div>
     <% end %>
   </div>
