--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,29 @@
-<%= form_with model:@user, local:true do |f| %>
-<div class="form-group">
-  <%= f.label :profile_image, "プロフィールイメージ" %>
-  <%= f.attachment_field :profile_image, placeholder:'プロフィールイメージ' %>
+<div class="container">
+  <div class="row mb-4 mx-auto">
+    <div class="col-md-12">
+      <p class="h4 mt-4 mb-5">プロフィール編集</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+    <%= form_with model:@user, local:true do |f| %>
+    <div class="form-group">
+      <%= f.label :profile_image, "プロフィールイメージ" %>
+      <%= f.attachment_field :profile_image, placeholder:'プロフィールイメージ' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :name, "名前" %>
+      <%= f.text_field :name, class: 'form-control', placeholder:'名前' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :introduction, "自己紹介" %>
+      <%= f.text_area :introduction, rows:'7', class: 'form-control', placeholder:'自己紹介' %>
+    </div>
+    <%= f.submit '変更を保存', class:'btn btn-primary' %>
+    <% end %>
+    </div>
+  </div>
 </div>
-<div class="form-group">
-  <%= f.label :name, "名前" %>
-  <%= f.text_field :name, class: 'form-control', placeholder:'名前' %>
-</div>
-<div class="form-group">
-  <%= f.label :introduction, "自己紹介" %>
-  <%= f.text_area :introduction, class: 'form-control', placeholder:'自己紹介' %>
-</div>
-<%= f.submit '変更を保存', class:'btn btn-primary' %>
-<% end %>
+
+
+
