--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,19 +1,13 @@
-<div class="container">
-  <div class="row mb-4 mx-auto">
-    <div class="col-md-12">
-      <p class="h4 mt-4 mb-5">""の検索結果</p>
-    </div>
-  </div>
-<% @posts.each do |post| %>
-      <div class="card  shadow-lg mb-3" style="max-width: 740px;">
-        <div class="row g-0">
-          <div class="col-md-4">
-        <%= link_to post_path(post) do %>
+<% posts.each do |post| %>
+<div class="card  shadow-lg mb-3" style="max-width: 740px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <%= link_to post_path(post) do %>
         <%= attachment_image_tag post, :post_image, size:'159x120',fallback:'no_image.jpg' %>
-        <% end %>
-          </div>
-           <div class="col-md-8">
-             <div class="card-body">
+      <% end %>
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
         <h5 class="card-title"><%= post.name %></h5>
         <p class="card-text"><small class="text-muted">
           <span class="fas fa-heart heart_red ml-1"><%= post.favorites.count %></span>
@@ -23,10 +17,8 @@
           <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-success' %>
           <%= link_to '削除', post_path(post), method: :delete,class: 'btn btn-sm btn-danger'  %>
         </small></p>
-          </div>
-        </div>
       </div>
     </div>
-<% end %>
-
+  </div>
 </div>
+<% end %>
