--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -54,7 +54,7 @@
         <% @categorys.each do |category| %>
           <tr>
             <td>
-              <%= link_to category, search_posts_path(category) %>
+              <%= link_to category, search_posts_path, controller: "posts", action: "search", category: category %>
             </td>
           </tr>
         <% end %>
@@ -65,29 +65,6 @@
 
     <div class="col-md-8">
       <h4>ALL Magis Strages</h4>
-      <% @posts.each do |post| %>
-      <div class="card  shadow-lg mb-3" style="max-width: 740px;">
-        <div class="row g-0">
-          <div class="col-md-4">
-        <%= link_to post_path(post) do %>
-        <%= attachment_image_tag post, :post_image, size:'159x120',fallback:'no_image.jpg' %>
-        <% end %>
-          </div>
-           <div class="col-md-8">
-             <div class="card-body">
-        <h5 class="card-title"><%= post.name %></h5>
-        <p class="card-text"><small class="text-muted">
-          <span class="fas fa-heart heart_red ml-1"><%= post.favorites.count %></span>
-          <span class="comments_count ml-1">コメント件数: <%= post.comments.count %></span>
-          <span class="ml-1">投稿者: <%= post.user.name %></span>
-          <span class="ml-1">投稿日: <%= post.created_at.strftime('%Y/%m/%d') %></span>
-          <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-success' %>
-          <%= link_to '削除', post_path(post), method: :delete,class: 'btn btn-sm btn-danger'  %>
-        </small></p>
-          </div>
-        </div>
-      </div>
+      <%= render 'posts/index', posts: @posts %>
     </div>
-    <% end %>
-  </div>
 </div>
