--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,34 +4,31 @@
       <p class="h4 mt-4 mb-5">マイページ</p>
     </div>
   </div>
-
   <div class="row">
-    <div class="col-md-4" style="background: #CCCCCC;">
-      <%= attachment_image_tag @user, :profile_image, size:'400x200', fallback:'no_image.jpg' %>
+    <div class="col-md-5">
+      <%= attachment_image_tag @user, :profile_image, size:'400x200', fallback:'no_image.jpg', class:'sized' %>
     </div>
-    <div class="col-md-8" style="background: #DDDDDD;">
-      <p>ユーザーネーム:<%= @user.name %></p>
-        <p>自己紹介:<%= @user.introduction %></p>
-        <% if @user.id == current_user.id %>
-          <%= link_to 'プロフィール編集', edit_user_path(@user) %>
-        <% end %>
+    <div class="col-md-6">
+      <table class="table">
+        <tr>
+          <th>ユーザーネーム : <%= @user.name %></th>
+        </tr>
+        <tr>
+          <td>自己紹介 : <%= @user.introduction %></td>
+        </tr>
+        <tr>
+          <td>
+          <% if @user.id == current_user.id %>
+            <%= link_to 'プロフィール編集', edit_user_path(@user), class:'btn btn-primary'%>
+          <% end %>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
   <div class="col-md-12">
   <h4> My ALL Magis Strages</h4>
-  <% @posts.each do |post| %>
-  <div class="card shadow-lg mb-3">
-  <%= link_to post_path(post) do %>
-  <%= attachment_image_tag post, :post_image, size:'50x50',fallback:'no_image.jpg'%>
-  <% end %>
-  <%= post.name %><br/>
-  <%= post.created_at.strftime('%Y/%m/%d') %>
-  <span class="text-right">
-  <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-success rounded-pill' %>
-  <%= link_to '削除', post_path(post), method: :delete,class: 'btn btn-sm btn-danger rounded-pill'  %>
-  </span>
-  </div>
-  <% end %>
+   <%= render 'posts/index', posts: @posts %>
 </div>
 
 
