ランキング、検索機能終了

--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,6 +1,22 @@
 <% post.comments.each do |comment| %>
-  <p><%= attachment_image_tag comment.user, :profile_image, size:'100x100',fallback:'no_image.jpg' %></p>
-  <%= comment.comment %><br/>
-  <%= comment.user.name %> <%= comment.created_at.strftime('%Y/%m/%d') %>
-  <%= link_to 'コメントを削除', post_comment_path(comment.post,comment), method: :delete, remote: true %>
+<div class="card  shadow-lg mb-3">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <%= attachment_image_tag comment.user, :profile_image, size:'200x130',fallback:'no_image.jpg' %>
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"><%= comment.comment %></h5>
+        <p class="card-text"><small class="text-muted">
+          <span class="fas fa-heart heart_red ml-1"><%= post.favorites.count %></span>
+          <span class="comments_count ml-1">コメント件数: <%= post.comments.count %></span>
+          <span class="ml-1">投稿者: <%= comment.user.name %></span>
+          <span class="ml-1">投稿日: <%= comment.created_at.strftime('%Y/%m/%d') %></span>
+          <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-success' %>
+          <%= link_to 'コメントを削除', post_comment_path(comment.post,comment), method: :delete, remote: true, class: "btn btn-sm btn-danger" %>
+        </small></p>
+      </div>
+    </div>
+  </div>
+</div>
 <% end %>
