--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mb-4 mx-auto">
     <div class="col-md-12">
-      <p class="h4 mt-4 mb-5">""の検索結果</p>
+      <p class="h4 mt-4 mb-5"> " <%= params[:name] %><%= params[:category] %> "の検索結果 </p>
     </div>
   </div>
 <% @posts.each do |post| %>
