--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
     <header class="shadow-sm" style="background: #CCCCCC;">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -46,5 +45,6 @@
       </nav>
     </header>
     <%= yield %>
+    <footer class="footer text-center" style="height: 80px; line-height: 80px;">© 2021 Magic Storage All Rights Reserved</footer>
   </body>
 </html>
