--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -68,5 +68,6 @@
     <div class="col-md-8">
       <h4 class="mt-4 mb-4 text-center">ALL Magic Storages</h4>
       <%= render 'posts/index', posts: @posts %>
+      <p><%= paginate @posts %></p>
     </div>
 </div>
