--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -3,6 +3,9 @@
     <div class="col-md-12">
       <p class="h4 mt-4 mb-5"> " <%= params[:name] %><%= params[:category] %> "の検索結果 </p>
     </div>
+    <% if @posts == [] %>
+      <%= flash[:notice] %>
+    <% end %>
   </div>
 <% @posts.each do |post| %>
       <div class="card  shadow-lg mb-3" style="max-width: 740px;">
@@ -28,5 +31,5 @@
       </div>
     </div>
 <% end %>
-
+ <p><%= paginate @posts %></p>
 </div>
