--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,7 @@
     <div class="col-md-12">
       <p class="h4 mt-4 mb-5"> 詳細画面検索結果 </p>
     </div>
+    <%= flash[:notice] %>
   </div>
   <div class="row">
     <div class="col-md-12 text-center">
