--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,8 +2,16 @@
   <div class="row mb-4 mx-auto">
     <div class="col-md-12">
       <p class="h4 mt-4 mb-5">プロフィール編集</p>
+      <% if @user.errors.any? %>
+        <%= @user.errors.count %>件のエラーがあります:
+        <% @user.errors.full_messages.each do |message| %>
+      <li>
+        <%= message %>
+      </li>
+      <% end %>
     </div>
   </div>
+  <% end %>
   <div class="row">
     <div class="col-md-12">
     <%= form_with model:@user, local:true do |f| %>
@@ -12,7 +20,7 @@
       <%= f.attachment_field :profile_image, placeholder:'プロフィールイメージ' %>
     </div>
     <div class="form-group">
-      <%= f.label :name, "名前" %>
+      <%= f.label :name, "ユーザーネーム" %>
       <%= f.text_field :name, class: 'form-control', placeholder:'名前' %>
     </div>
     <div class="form-group">
