--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
   <div class="row mb-4 mx-auto">
     <div class="col-md-12">
       <p class="h4 mt-4 mb-5">マイページ</p>
+      <%= flash[:notice] %>
     </div>
   </div>
   <div class="row">
