ビューの調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,6 @@
       </nav>
     </header>
     <%= yield %>
-    <footer class="footer text-center" style="height: 80px; line-height: 80px;">© 2021 Magic Storage All Rights Reserved</footer>
+    <footer class="text-center" style="height: 80px; line-height: 80px;">© 2021 Magic Storage All Rights Reserved</footer>
   </body>
 </html>
