--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -41,7 +41,7 @@
       <div class="search-form mt-4 mb-4">
       <%= form_with url: search_posts_path, method: :get, local: true do |f| %>
         <%= f.text_field :name, placeholder:"商品名"%>
-        <%= f.submit '検索', class: 'btn btn-sm btn-secondary ' %>
+        <%= f.submit '検索', class: 'btn btn-sm btn-outline-secondary ' %>
       <% end %>
       </div>
 
