--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,14 @@
 .kaminari {
   text-decoration: none;
 }
+
+a {
+  color: black;
+}
+
+// body {
+//     a:link {color:#C0C0C0; text-decoration:none }
+//     // a:visited { color:#000080; text-decoration:none }
+//     a:hover { color:#C0C0C0; text-decoration:none }
+//     a:active { color:#000080; text-decoration:none }
+// }
