--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -15,8 +15,7 @@
           <span class="ml-1">投稿者: <%= post.user.name %></span>
           <span class="ml-1">投稿日: <%= post.created_at.strftime('%Y/%m/%d') %></span>
           <% if post.user == current_user %>
-            <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-success' %>
-            <%= link_to '削除', post_path(post), method: :delete,class: 'btn btn-sm btn-danger'  %>
+            <%= link_to '編集', edit_post_path(post), class: 'btn btn-sm btn-outline-secondary' %>
           <% end %>
         </small></p>
       </div>
