--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,7 +1,11 @@
 <table class="table mt-2">
 <% post.comments.each do |comment| %>
   <tr>
-    <td> <%= attachment_image_tag comment.user, :profile_image, size:'50x50',fallback:'no_image.jpg' %></td>
+    <td>
+    <%= link_to user_path(comment.user) do %>
+      <%= attachment_image_tag comment.user, :profile_image, size:'50x50',fallback:'no_image.jpg' %>
+    <% end %>
+    </td>
     <td><%= comment.comment %></td>
     <td><%= link_to comment.user.name, user_path(comment.user) %></td>
     <td><%= comment.created_at.strftime('%Y/%m/%d') %></td>
