--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
         <div class="col-md-8 col-lg-5 mx-auto">
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="form-group">
-            <%= f.label :name , "名前"%><br />
+            <%= f.label :name , "ユーザーネーム"%><br />
             <%= f.text_field :name, autofocus: true, placeholder: "例)令和太郎", class: "form-control" %>
           </div>
           <div class="form-group">
