--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title"><%= post.name %></h5>
+        <h5 class="card-title"><%= link_to post.name, post_path(post) %></h5>
         <p class="card-text"><small class="text-muted">
           <span class="fas fa-heart heart_red ml-1"><%= post.favorites.count %></span>
           <span class="comments_count ml-1">コメント件数: <%= post.comments.count %></span>
