お問合せ機能完了

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,9 @@
                 <%= link_to 'マイページ', user_path(current_user.id), class: "nav-link text-dark tab rounded-pill" %>
               </li>
               <li class="nav-item">
+                <%= link_to 'お問い合わせ', inquiry_path, class: "nav-link text-dark tab rounded-pill" %>
+              </li>
+              <li class="nav-item">
                 <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link text-dark tab rounded-pill" %>
               </li>
             <% else %>
