--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,12 +3,14 @@
     <div class="col-md-12">
       <p class="h4 mt-4 mb-5">プロフィール編集</p>
       <% if @user.errors.any? %>
-        <%= @user.errors.count %>件のエラーがあります:
-        <% @user.errors.full_messages.each do |message| %>
-      <li>
-        <%= message %>
-      </li>
+      <div class="alert alert-danger" role="alert">
+          <%= @user.errors.count %>件のエラーがあります:
+          <% @user.errors.full_messages.each do |message| %>
+        <li>
+          <%= message %>
+        </li>
       <% end %>
+      </div>
     </div>
   </div>
   <% end %>
@@ -20,7 +22,7 @@
         <%= f.attachment_field :profile_image, placeholder:'プロフィールイメージ' %>
       </div>
       <div class="form-group">
-        <%= f.label :name, "ユーザーネーム" %>
+        <%= f.label :name, "ユーザーネーム" %><span class="text-danger">（必須）</span>
         <%= f.text_field :name, class: 'form-control', placeholder:'名前' %>
       </div>
       <div class="form-group">
