--- a/app/views/inquiry/thanks.html.erb
+++ b/app/views/inquiry/thanks.html.erb
@@ -1,6 +1,12 @@
-<div class="page-header">
-  <h1>お問い合わせ</h1>
+<div class="container">
+  <div class="row mb-4 mx-auto">
+    <div class="col-md-12">
+       <p class="h4 mt-4 mb-5">お問い合わせ</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <p>お問い合わせいただきありがとうございました。</p>
+    </div>
+  </div>
 </div>
-<p>
-  お問い合わせいただきありがとうございました。
-</p>
