--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,6 +2,16 @@
   <div class="row mb-4 mx-auto">
     <div class="col-md-12">
       <p class="h4 mt-4 mb-5">投稿編集</p>
+        <% if @post.errors.any? %>
+        <div class="alert alert-danger" role="alert">
+        <%= @post.errors.count %>件のエラーがあります:
+        <% @post.errors.full_messages.each do |message| %>
+          <li>
+            <%= message %>
+          </li>
+        <% end %>
+      </div>
+      <% end %>
     </div>
   </div>
   <div class="row">
@@ -12,10 +22,12 @@
           <p>商品画像</p><%= f.attachment_field :post_image, placeholder:'商品の画像' %>
         </div>
         <div class="form-group">
-          <p>商品名</p><%= f.text_field :name, class: 'form-control', placeholder:'商品名' %>
+          <p>商品名<span class="text-danger">（必須）</p><%= f.text_field :name, class: 'form-control', placeholder:'商品名' %>
         </div>
         <div class="form-group">
-          <p>カテゴリー</p><%= f.select :category, [["キッチン", "キッチン"], ["バスルーム", "バスルーム"], ["クローゼット", "クローゼット"], ["リビング", "リビング"], ["トイレ", "トイレ"]], include_blank: "選択して下さい", class: 'form-control' %>
+          <p>カテゴリー<span class="text-danger">（必須）</p>
+          <%= f.select :category, [["キッチン","キッチン" ],["パントリー", "パントリー"],["バスルーム", "バスルーム"], ["クローゼット", "クローゼット"],
+          ["リビング", "リビング"], ["トイレ", "トイレ"],["その他", "その他"]], include_blank: "選択して下さい", class: 'form-control' %>
         </div>
         <div class="form-group">
           <p>商品の大きさ</p><%= f.text_field :size, class: 'form-control', placeholder:'たて○cm よこ◯cm 高さ○cm' %>
@@ -24,7 +36,7 @@
           <p>購入先URL</p> <%= f.text_field :shop_url, class: 'form-control', placeholder:'購入先のURLを入力' %>
         </div>
         <div class="form-group">
-          <p>商品説明</p> <%= f.text_area :caption, rows:'7' ,class: 'form-control', placeholder:'使用方法などを記載してください' %>
+          <p>商品説明<span class="text-danger">（必須）</p> <%= f.text_area :caption, rows:'7' ,class: 'form-control', placeholder:'使用方法などを記載してください' %>
         </div>
       </div>
       <div class="col-md-4 mx-auto mb-4 mt-4">
