--- a/app/views/favorites/_favorite-btn.html.erb
+++ b/app/views/favorites/_favorite-btn.html.erb
@@ -1,5 +1,7 @@
+<% if user_signed_in? %>
   <% if post.favorited_by?(current_user) %>
     <%= link_to post.favorites.count, post_favorites_path(post), method: :delete, remote: true, class: "fas fa-heart heart_red" %>
     <% else %>
     <%= link_to post.favorites.count, post_favorites_path(post), method: :post, remote: true, class: "fas fa-heart heart_blue" %>
   <% end %>
+<% end %>
