--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -48,9 +48,13 @@
   </div>
   <div class="row">
     <div class="col-md-12 mt-2">
-      <%= form_with model:[@post, @post_comment] do |f| %>
-      <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに", class: 'form-control'%>
-      <%= f.submit "コメントする", class: "btn btn-sm btn-outline-secondary mt-2" %>
+      <% if user_signed_in? %>
+        <%= form_with model:[@post, @post_comment] do |f| %>
+        <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに", class: 'form-control'%>
+        <%= f.submit "コメントする", class: "btn btn-sm btn-outline-secondary mt-2" %>
+        <% end %>
+      <% else %>
+        <p class="text-center">いいね！やコメントを残すには " <%= link_to '会員登録', new_user_registration_path %> " が必要です</p>
       <% end %>
     </div>
   </div>
