--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -2,10 +2,10 @@
   <div class="row mb-4 mx-auto">
     <div class="col-md-12">
       <p class="h4 mt-4 mb-5"> " <%= params[:name] %><%= params[:category] %> "の検索結果 </p>
-    </div>
-    <% if @posts == [] %>
-      <%= flash[:notice] %>
+      <% if @posts == [] %>
+      <h4 class="text-center text-danger">検索したい商品名を入力してください</h4>
     <% end %>
+    </div>
   </div>
 <% @posts.each do |post| %>
       <div class="card  shadow-lg mb-3" style="max-width: 740px;">
@@ -32,5 +32,7 @@
       </div>
     </div>
 <% end %>
+<% if @posts != [] %>
  <p><%= paginate @posts %></p>
+<% end %>
 </div>
