--- a/app/views/inquiry/thanks.html.erb
+++ b/app/views/inquiry/thanks.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row mb-4 mx-auto">
     <div class="col-md-12">
-       <p class="h4 mt-4 mb-5">お問い合わせ</p>
+       <p class="h4 mt-4 mb-5"></p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <p>お問い合わせいただきありがとうございました。</p>
+      <h4 class="text-center mb-5">お問い合わせいただきありがとうございました。</h4>
     </div>
   </div>
 </div>
