--- a/app/views/inquiry/confirm.html.erb
+++ b/app/views/inquiry/confirm.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row mb-4 mx-auto">
     <div class="col-md-12">
-       <p class="h4 mt-4 mb-5">お問い合わせ</p>
+       <p class="h4 mt-4 mb-5">お問い合わせ内容確認</p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
       <%= form_with model:@inquiry, url:inquiry_thanks_path, local:true do |f| %>
-        <table class="table"> 
+        <table class="table table-bordered">
           <tr>
             <th>名前</th>
             <td>
@@ -23,14 +23,35 @@
             </td>
           </tr>
           <tr>
-            <th>お問い合わせ内容</th>
+            <th>お問い合わせの種類</th>
+            <td>
+              <%= f.hidden_field :category %>
+              <%= @inquiry.category %>
+            </td>
+          </tr>
+          <tr>
+            <th>お問合せ内容</th>
             <td>
               <%= f.hidden_field :message %>
               <%= simple_format(@inquiry.message) %>
             </td>
           </tr>
+          <tr>
+            <th>アプリの評価</th>
+            <td>
+              <%= f.hidden_field :evaluation %>
+              <%= @inquiry.evaluation %>
+            </td>
+          </tr>
+          <tr>
+            <th>ご意見、ご感想</th>
+            <td>
+              <%= f.hidden_field :feedback %>
+              <%= simple_format(@inquiry.feedback) %>
+            </td>
+          </tr>
         </table>
-        <%= f.submit '送信', :class => 'btn btn-primary' %>
+        <%= f.submit '送信する', :class => 'btn btn-sm btn-primary mb-5' %>
       <% end %>
     </div>
   </div>
