--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
               </li>
             <% else %>
               <li class="nav-item">
+                <%= link_to '投稿一覧', posts_path, class: "nav-link text-dark tab rounded-pill" %>
+              </li>
+              <li class="nav-item">
                 <%= link_to "新規登録", new_user_registration_path, class: "nav-link text-dark tab rounded-pill" %>
               </li>
               <li class="nav-item">
